modal overflow fixed on markup preview

--- a/src/components/project/SetupGenerator.css
+++ b/src/components/project/SetupGenerator.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  min-height: 100%;
 }
 
 .setup-generator-modal {
@@ -34,6 +35,7 @@
   margin: 0;
   font-size: 1.25rem;
   font-weight: 600;
+  color: black;
 }
 
 .setup-generator-tabs {
@@ -62,7 +64,7 @@
 
 .setup-generator-content {
   flex: 1;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
 }
